# AntichessAI

./: .gitignore  AntichessAI  CITATION.cff  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake
.github/workflows/: cmake.yml
src/: CMakeLists.txt  main.cpp
src/Board/: Board.cpp  Board.h
src/cpp-chess/: chess.cpp  chess.h  cppchess.h
src/evaluate/: evaluate.cpp  evaluate.h  piece_tables.cpp
src/memoization/: transposition_table.cpp  transposition_table.h  zobrist_hashes.cpp
src/search/: search.cpp  search.h
src/timer/: timer.cpp  timer.h
src/util/: util.cpp  util.h
